tdf#130952 crash launching bullets and numbering from sidebar more... dropdown

Change-Id: I242c7281a891a8e52d9fa4e5ee2d20ba56d62fdc
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/89528
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>